src/test/resources/amyc/typer/failing/OperatorError2.amy
object OperatorError
    val str: String = 1 + 1;
    str
end OperatorError
